// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quiz pages should meet 'Loading...' on trying to receive a question 1`] = `"<h2>Loading...</h2>"`;

exports[`quiz pages should register correct answer with simulate click 1`] = `
"<div>
  <p class=\\"question-and-score-txt\\">What is the slowest animal in the world?</p>
  <div data-testid=\\"answer_a\\"><button class=\\"button\\" name=\\"answer\\">The turtle</button></div>
  <div data-testid=\\"answer_b\\"><button class=\\"button\\" name=\\"answer\\">The sloth</button></div>
</div>
<div class=\\"score-wrapper\\" data-testid=\\"score-status\\">
  <p class=\\"score-txt-correct\\">1</p>
  <p class=\\"score-text-separator\\"> / </p>
  <p class=\\"score-txt-answered\\">1</p>
</div>
<div><a class=\\"home\\" href=\\"/\\">Home</a></div>"
`;

exports[`quiz pages should register wrong answer with simulate click 1`] = `
"<div>
  <p class=\\"question-and-score-txt\\">What is the slowest animal in the world?</p>
  <div data-testid=\\"answer_a\\"><button class=\\"button\\" name=\\"answer\\">The turtle</button></div>
  <div data-testid=\\"answer_b\\"><button class=\\"button\\" name=\\"answer\\">The sloth</button></div>
</div>
<div class=\\"score-wrapper\\" data-testid=\\"score-status\\">
  <p class=\\"score-txt-correct\\">0</p>
  <p class=\\"score-text-separator\\"> / </p>
  <p class=\\"score-txt-answered\\">1</p>
</div>
<div><a class=\\"home\\" href=\\"/\\">Home</a></div>"
`;

exports[`quiz pages should render FrontPage component, correct and answered score 1`] = `
"<div>
  <h1 class=\\"question-and-score-txt\\">Take a quiz</h1>
  <div class=\\"score-wrapper\\" data-testid=\\"score-status\\">
    <p class=\\"score-txt-correct\\">1</p>
    <p class=\\"score-text-separator\\"> / </p>
    <p class=\\"score-txt-answered\\">2</p>
  </div>
  <div><a class=\\"home\\" href=\\"/question\\">New quiz</a></div>
</div>"
`;

exports[`quiz pages should render Home component 1`] = `"<div><a class=\\"home\\" href=\\"/\\">Home</a></div>"`;

exports[`quiz pages should render Quiz component 1`] = `
"<div>
  <h1 class=\\"question-and-score-txt\\">Take a quiz</h1>
  <div class=\\"score-wrapper\\" data-testid=\\"score-status\\">
    <p class=\\"score-txt-correct\\"></p>
    <p class=\\"score-text-separator\\"> / </p>
    <p class=\\"score-txt-answered\\"></p>
  </div>
  <div><a class=\\"home\\" href=\\"/question\\">New quiz</a></div>
</div>"
`;

exports[`quiz pages should render Score component, correct and answered score 1`] = `
"<div class=\\"score-wrapper\\" data-testid=\\"score-status\\">
  <p class=\\"score-txt-correct\\">4</p>
  <p class=\\"score-text-separator\\"> / </p>
  <p class=\\"score-txt-answered\\">5</p>
</div>"
`;

exports[`quiz pages should render ShowAnswer component to '/correct' 1`] = `
"<div class=\\"show-answer-div\\">
  <h1 class=\\"question-and-score-txt\\">✅ Correct!</h1>
  <ul class=\\"ul\\">
    <li><a class=\\"home\\" href=\\"/question\\">More questions</a></li>
    <li><a class=\\"home\\" href=\\"/\\">Home</a></li>
  </ul>
</div>"
`;

exports[`quiz pages should render ShowAnswer component to '/wrong' 1`] = `
"<div class=\\"show-answer-div\\">
  <h1 class=\\"question-and-score-txt\\">❌ Wrong</h1>
  <ul class=\\"ul\\">
    <li><a class=\\"home\\" href=\\"/question\\">More questions</a></li>
    <li><a class=\\"home\\" href=\\"/\\">Home</a></li>
  </ul>
</div>"
`;

exports[`quiz pages should render a question and its answer options 1`] = `
"<div>
  <p class=\\"question-and-score-txt\\">What is the slowest animal in the world?</p>
  <div data-testid=\\"answer_a\\"><button class=\\"button\\" name=\\"answer\\">The turtle</button></div>
  <div data-testid=\\"answer_b\\"><button class=\\"button\\" name=\\"answer\\">The sloth</button></div>
</div>
<div class=\\"score-wrapper\\" data-testid=\\"score-status\\">
  <p class=\\"score-txt-correct\\">0</p>
  <p class=\\"score-text-separator\\"> / </p>
  <p class=\\"score-txt-answered\\">0</p>
</div>
<div><a class=\\"home\\" href=\\"/\\">Home</a></div>"
`;

exports[`quiz pages should trigger an error on trying to receive a question 1`] = `"<div class=\\"error-message\\">Custom exception thrown: 404 Not found - Cannot get question</div>"`;
